syntax = "proto3";

option go_package = "/grpc_practice";
package grpc_practice;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
